--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
