--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.4.1",
     "react-redux": "^7.2.2",
